test_suite5/ALAN/test_suite/alan-2022-examples/failing/007650_mutation.alan
source Cz begin while / do relax end end
